Center swatches on mobile in tile. Cleanup gallery to fix pagination issues

--- a/src/Magento_Catalog/web/css/source/module/_module.scss
+++ b/src/Magento_Catalog/web/css/source/module/_module.scss
@@ -76,7 +76,7 @@
     }
 
     &__nav-wrap {
-        padding: 2rem 2rem 0;
+        padding: 2rem 1.5rem 0;
 
         @include media('<tablet') {
             padding-top: 0;
@@ -85,6 +85,9 @@
         }
 
         &--horizontal {
+            padding-left: 0;
+            padding-right: 0;
+
             #{$root}__nav--thumbs {
                 height: auto !important;
             }
@@ -112,9 +115,12 @@
             width: 100% !important;
             padding: 2rem 0 0;
             height: auto !important;
+            text-align: center;
         }
 
         &__frame {
+            box-sizing: border-box !important;
+
             @include media('<tablet') {
                 border-radius: 2px;
                 background-color: $colorAlto;
@@ -155,8 +161,8 @@
         @include media('<tablet') {
             display: flex;
             justify-content: center;
-            left: 50% !important;
-            transform: translateX(-50%) !important;
+            text-align: center !important;
+            padding: 2rem 0 0;
         }
     }
 
@@ -194,6 +200,8 @@
     }
 
     &__stage__shaft {
+        margin: 0 auto !important;
+
         @include media('<tablet') {
             margin: 0 auto !important;
         }
